<resources>
    <string name="app_name">Bija Training</string>

    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the best product</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>
    <string name="toolbarTitle">Bija Training</string>
    <string name="Nav_open">nav open</string>
    <string name="nav_close">nav close</string>

    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Signup with Facebook"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_activity_drawer_acitivy">DrawerAcitivy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_notification">fragment_notification</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>


</resources>
