<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/login_title"
                style="@style/LabelStyle"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/login_title"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/login_welcome_msg"
                style="@style/LabelStyle"
                android:layout_below="@id/login_title"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:text="@string/login_welcome_txt" />

            <EditText
                android:id="@+id/et_username"
                style="@style/EditTextStyle"
                android:backgroundTint="@color/orange"
                android:layout_below="@id/login_welcome_msg"
                android:layout_marginTop="@dimen/dp20_space"
                android:hint="Username" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_username"
                android:layout_marginTop="@dimen/dp20_space"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/et_password"
                android:layout_marginTop="@dimen/dp20_space"
                android:text="@string/login_btn_label" />

        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>